backend: endpoint for adding cards to decks | front: edit deck page and layout improvements
