# app/Http/Controllers/DeckController.php
@@ -6,13 +6,16 @@ use App\Http\Controllers\Docs\DeckControllerDocs;
 use App\Models\Card;
 use App\Models\Deck;
 use App\Services\ApiResponse;
+use App\Services\DeckService;
 use App\Services\ScryfallService;
 use Illuminate\Http\Request;
-use Illuminate\Validation\Rule;
 
 class DeckController extends Controller implements DeckControllerDocs
 {
-    public function __construct(protected ScryfallService $scryfall) {}
+    public function __construct(
+        protected ScryfallService $scryfall,
+        protected DeckService $deckService
+    ) {}
 
     public function index(Request $req)
     {
@@ -27,15 +30,9 @@ class DeckController extends Controller implements DeckControllerDocs
 
         $cardInfo = $this->scryfall->named($req->commander_name);
         if (!isset($cardInfo['id']))
-            return ApiResponse::error('Card not found!', 404);
+            return ApiResponse::error('Card not found', 404);
 
-        $deck = Deck::create([
-            'name' => $req->name,
-            'commander_name' => $cardInfo['printed_name'] ?? $cardInfo['name'],
-            'commander_colors' => $cardInfo['color_identity'],
-            'image_url' => $cardInfo['image_uris']['normal'],
-            'art_crop' => $cardInfo['image_uris']['art_crop']
-        ]);
+        $deck = Deck::create(DeckService::parseCommanderData($req->name, $cardInfo));
 
         return ApiResponse::success($deck, 201);
     }
@@ -43,23 +40,16 @@ class DeckController extends Controller implements DeckControllerDocs
     public function update(Request $req, string $id)
     {
         $this->validateDeckData($req);
+        $deck = Deck::find($id);
+        if (!$deck)
+            return ApiResponse::error('Deck not found', 404);
 
         $cardInfo = $this->scryfall->named($req->commander_name);
         if (!isset($cardInfo['id']))
-            return ApiResponse::error('Card not found!', 404);
+            return ApiResponse::error('Card not found', 404);
 
-        $deck = Deck::find($id);
-        if ($deck) {
-            $deck->update([
-                'name' => $req->name,
-                'commander_name' => $cardInfo['printed_name'] ?? $cardInfo['name'],
-                'commander_colors' => $cardInfo['color_identity'],
-                'image_url' => $cardInfo['image_uris']['normal'],
-                'art_crop' => $cardInfo['image_uris']['art_crop']
-            ]);
-            return ApiResponse::success($deck);
-        } else
-            return ApiResponse::error('Deck not found', 404);
+        $deck->update(DeckService::parseCommanderData($req->name, $cardInfo));
+        return ApiResponse::success($deck);
     }
 
 
@@ -87,8 +77,33 @@ class DeckController extends Controller implements DeckControllerDocs
 
         if ($deck) {
             $deck->delete();
-            return ApiResponse::success('Deck deleted successfully!');
+            return ApiResponse::success('Deck deleted successfully');
         } else
             return ApiResponse::error('Deck not found', 404);
+    }
+
+    public function addCard(Request $req, string $id)
+    {
+        $req->validate([
+            'card_name' => 'string|required|max:255',
+            'image_url' => 'string',
+            'extra_image' => 'string'
+        ]);
+
+        // get deck (commander) info
+        $deck = Deck::find($id);
+        if (!$deck)
+            return ApiResponse::error('Deck not found', 404);
+
+        // get card info
+        $cardData = $this->scryfall->named($req->card_name);
+        if (!$cardData || !isset($cardData['id']))
+            return ApiResponse::error('Card not found', 404);
+
+        $result = $this->deckService->addCardToDeck($deck, $cardData, $req->all());
+        if ($result !== true)
+            return ApiResponse::error($result);
+        else
+            return ApiResponse::success('Card added successfully');
     }
 }
