# app/Models/DeckCard.php
@@ -2,24 +2,16 @@
 
 namespace App\Models;
 
-use Illuminate\Database\Eloquent\Model;
+use Illuminate\Database\Eloquent\Relations\Pivot;
 
-class DeckCard extends Model
+class DeckCard extends Pivot
 {
     protected $fillable = [
         'deck_id',
         'card_id',
         'quantity',
-        'image_url'
+        'image_url',
+        'extra_image', // for double faced cards for example
+        'printed_name', // for cards in other languages
     ];
-
-    public function deck()
-    {
-        return $this->belongsTo(Deck::class);
-    }
-
-    public function card()
-    {
-        return $this->belongsTo(Card::class);
-    }
 }
