# routes/api.php
@@ -14,5 +14,6 @@ Route::get('/cards/prints', [CardController::class, 'getCardPrints'])->name('car
 Route::get('/decks', [DeckController::class, 'index'])->name('decks_index');
 Route::post('/decks', [DeckController::class, 'create'])->name('decks_create');
 Route::put('/decks/{id}', [DeckController::class, 'update'])->name('decks_update');
+Route::put('/decks/{id}/add-card', [DeckController::class, 'addCard'])->name('decks_add_card');
 Route::get('/decks/{id}', [DeckController::class, 'show'])->name('decks_show');
 Route::delete('/decks/{id}', [DeckController::class, 'delete'])->name('decks_delete');
